[tool.poetry]
name = "automated-valet-car-parking-backend"
version = "0.1.0"
description = "An automated valet car parking system with managed parking space."
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
